--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
-
-
-
 {
     "version": 2,
     "builds": [
@@ -12,7 +9,7 @@
     "routes": [
       {
         "src": "/(.*)",         
-        "dest": "./index.js"    
+        "dest": "/"    
       }
     ]
   }
